--- a/examples/html/cube.html
+++ b/examples/html/cube.html
@@ -5,31 +5,30 @@
 body {
   margin: 0;
 }
-.buttons {
+/* .buttons {
   display: flex;
   position: absolute;
   right: 30px;
   bottom: 30px;
-}
+} */
 </style>
 </head>
 <body>
-<div class=buttons>
+<!-- <div class=buttons>
   <input type=button id=enter-vr-button value="Enter XR">
-</div>
+</div> -->
+<canvas id=canvas></canvas>
 <script type=module>
 import * as THREE from './three.module.js';
 
-console.log('listening');
-window.xrpackage.addEventListener('load', e => {
+console.log('cube listen');
+navigator.xr.addEventListener('sessiongranted', e => {
+console.log('cube got session granted', e);
 
-const {canvas, context, session} = e.data;
-
+const canvas = document.getElementById('canvas');
 const renderer = new THREE.WebGLRenderer({
   canvas,
-  context,
 });
-renderer.autoClear = false;
 renderer.sortObjects = false;
 renderer.physicallyCorrectLights = true;
 renderer.xr.enabled = true;
@@ -62,8 +61,6 @@ cubeMesh.rotation.order = 'YXZ';
 scene.add(cubeMesh);
 
 function animate() {
-  renderer.state.reset();
-
   const f = (Date.now()%2000)/2000 * Math.PI*2;
   cubeMesh.rotation.x = f;
   cubeMesh.rotation.y = f;
@@ -90,17 +87,12 @@ function onSessionEnded() {
 
   currentSession = null;
 }
-onSessionStarted(session);
-/* if (currentSession === null) {
-  navigator.xr.requestSession('immersive-vr', {
-    optionalFeatures: [
-      'local-floor',
-      'bounded-floor',
-    ],
-  }).then(onSessionStarted);
-} else {
-  currentSession.end();
-} */
+navigator.xr.requestSession('immersive-vr', {
+  optionalFeatures: [
+    'local-floor',
+    'bounded-floor',
+  ],
+}).then(onSessionStarted);
 
 });
 </script>
